<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total em Quilometros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por Litro</string>
    <string name="total_spend">seu gasto total será de:</string>
    <string name="value">R$ 0</string>
    <string name="calculate">calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>